# evennia-targeting

./: CLAUDE.md  README.md  pyproject.toml  runtests.py
DESIGN/: INDEX.md  documentation-structure.md  progress.md
docs/: INDEX.md  architecture.md  documentation-structure.md  progress.md
docs/archive/: README.md
src/evennia_targeting/: __init__.py  apps.py  helpers.py  predicates.py  tests.py
tests/: test_settings.py  urls.py
