[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "evennia-targeting"
version = "0.0.1"
description = "Composable targeting predicates and content-filtering helpers for Evennia"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [{name = "Tim Baird"}]
requires-python = ">=3.10"
dependencies = [
    "evennia",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["evennia_targeting*"]
